# tarstream

./: Cargo.toml  README.md
examples/: basic_download.rs  custom_filter.rs
go/: go.mod  tarstream.go
go/compression/: cgo_bzip2.go  cgo_gzip.go  cgo_xz.go  cgo_zstd.go  compression.go  decompressor.go
go/examples/basic_download/: main.go
go/examples/custom_filter/: main.go
go/examples/highperf/: main.go
go/pipeline/: bufferpool.go  channel_reader.go  decompress_stage.go  http_stage.go  pipeline.go  tar_stage.go  types.go  worker_pool.go
src/: callback.rs  compression.rs  error.rs  lib.rs  stream.rs
