[package]
name = "tarstream"
description = "tarstream download and extract on the fly"
license-file = "LICENSE"
version = "0.1.0"
edition = "2024"

repository = "https://github.com/ax-x2/tarstream"
homepage = "https://1000x.sh"

[dependencies]
tokio = { version = "1.49", features = ["rt-multi-thread", "net", "io-util", "macros"] }
tokio-util = { version = "0.7", features = ["io"] }
reqwest = { version = "0.13", features = ["stream"] }
futures-util = "0.3"
bytes = "1.11"
tar = "0.4"
flate2 = "1.1"
bzip2 = "0.6"
xz2 = "0.1"
thiserror = "2.0"

[dev-dependencies]
tokio = { version = "1.49", features = ["full"] }
tempfile = "3.24"
regex = "1.11"
